// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot serializers works with array of strings in property matcher 1`] = `
{
  "arrayOfStrings": [
    "stream",
  ],
}
`;

exports[`snapshot serializers works with default serializers 1`] = `
<div
  id="foo"
/>
`;

exports[`snapshot serializers works with expect.XXX within array in property matcher 1`] = `
{
  "arrayOfStrings": [
    Any<String>,
  ],
}
`;

exports[`snapshot serializers works with first plugin 1`] = `
{
  "foo": 1,
}
`;

exports[`snapshot serializers works with nested serializable objects 1`] = `
{
  "foo": {
    "bar": 2,
  },
}
`;

exports[`snapshot serializers works with prepended plugins and default serializers 1`] = `
<div
  aProp={
    {
      "a": 6,
    }
  }
  bProp={
    {
      "foo": 8,
    }
  }
/>
`;

exports[`snapshot serializers works with prepended plugins from expect method called once 1`] = `
<div
  aProp={
    {
      "a": 6,
    }
  }
  bProp={Foo: 8}
/>
`;

exports[`snapshot serializers works with prepended plugins from expect method called twice 1`] = `
<div
  aProp={
    {
      "a": 6,
    }
  }
  bProp={FOO: 8}
/>
`;

exports[`snapshot serializers works with second plugin 1`] = `
{
  "bar": 2,
}
`;
